--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ru.news.tagil.HelloActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_hello" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
