--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.INTERNET">true</uses-permission>
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_hello" >
+        </activity>
+        <activity
+                android:name=".LoginActivity"
+                android:label="@string/title_activity_hello" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
