--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
 
         <activity
-                android:name=".tape_activity"
+                android:name=".TapeActivity"
                 ></activity>
         <activity
                 android:name=".RegistrationActivity"
