--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -1,43 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.news.tagil"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="16" />
+    package="ru.news.tagil" android:versionCode="1" android:versionName="1.0" >
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET">true</uses-permission>
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_hello" >
+        <activity android:name=".MainActivity" android:label="@string/title_activity_hello" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity
-                android:name=".TapeActivity"
-                ></activity>
-        <activity
-                android:name=".RegistrationActivity"
-            ></activity>
-        <activity
-                android:name=".LoginActivity"
-                android:label="@string/title_activity_hello" >
-
-
-        </activity>
+        <activity android:name=".ReadPostActivity" ></activity>
+        <activity android:name=".TapeActivity"  ></activity>
+        <activity android:name=".RegistrationActivity" ></activity>
+        <activity android:name=".LoginActivity" android:label="@string/title_activity_hello" ></activity>
     </application>
-
 </manifest>
