--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         <activity android:name=".activity.activityLogin" />
         <activity android:name=".activity.activitySettings" />
         <activity android:name=".activity.activityUseful" />
+        <activity android:name=".activity.activityAds" />
+        <activity android:name=".activity.activityCorrespondence" />
+        <activity android:name=".activity.activityContact" />
+        <activity android:name=".activity.activityCommentNews" />
+        <activity android:name=".activity.activityFavoriteNews" />
+        <activity android:name=".activity.activityMessages" />
+
 
 
     </application>
