--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".activity.activityMain" android:label="@string/title_activity_hello" >
+        <activity android:name=".activity.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.activityMain" android:label="@string/title_activity_hello" >
         </activity>
 
         <activity android:name=".activity.activityNewsContent" />
