--- a/NewsTagil/build.gradle
+++ b/NewsTagil/build.gradle
@@ -15,7 +15,13 @@ dependencies {
 android {
     compileSdkVersion 17
     buildToolsVersion "17.0.0"
-
+    sourceSets {
+        main {
+            assets {
+                srcDir 'assets'
+            }
+        }
+    }
     defaultConfig {
         minSdkVersion 10
         targetSdkVersion 16
