--- a/NewsTagil/src/main/AndroidManifest.xml
+++ b/NewsTagil/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ru.news.tagil" android:versionCode="1" android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET">true</uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE">true</uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,7 +24,7 @@
         </activity>
         <activity android:name=".activity.activityReadAds"
                   android:screenOrientation="portrait"
-                ></activity>
+               />
         <activity android:name=".activity.activityRegistration"
                   android:windowSoftInputMode="stateHidden"
                   android:screenOrientation="portrait"/>
